<resources>
    <string name="app_name">Tarea-1</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="contrasenia_usuario">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="sesion_google">Iniciar sesion en Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="contrasenia_olvidad">¿No tienes cuenta? Crea una</string>
    <string name="nuevo_nombre">Nuevo Usuario</string>
    <string name="nueva_contrasenia">Nueva contraseña</string>
    <string name="repite_contrasenia">Confirmar contraseña</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="registrar">Crear cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_list">Lista</string>
    <string name="tab_favorites">Favoritos</string>
    <string name="navigation_draver_open">Drawer Abierto</string>
    <string name="navigation_draver_close">Drawer Cerrado</string>
</resources>